--- a/app/src/main/res/layout/activity_module_list.xml
+++ b/app/src/main/res/layout/activity_module_list.xml
@@ -30,7 +30,7 @@
         tools:text="My Modules" />
 
     <ListView
-        android:id="@+id/modulesList"
+        android:id="@+id/moduleList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
