--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,7 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menuLogout"
-        android:title="Logout"
+    android:id="@+id/menuLogout"
+    android:title="Logout"
+    />
+
+    <item
+        android:id="@+id/menuReminders"
+        android:title="Reminders"
         />
 </menu>
