--- a/app/src/main/res/layout/activity_modules_new_page.xml
+++ b/app/src/main/res/layout/activity_modules_new_page.xml
@@ -59,6 +59,7 @@
         android:text="Attendance"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SolutionsBtn" />
 
@@ -112,5 +113,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lectureName" />
+
+    <Button
+        android:id="@+id/GradeAnalyticsBtn"
+        android:layout_width="142dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginBottom="48dp"
+        android:text="Grades"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AttendanceBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
