--- a/app/src/main/res/layout/activity_grade_analytics.xml
+++ b/app/src/main/res/layout/activity_grade_analytics.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradebackground"
     tools:context=".GradeAnalytics">
 
     <TextView
@@ -15,6 +16,7 @@
         android:layout_marginRight="24dp"
         android:gravity="center"
         android:text="No. of Fails"
+        android:textColor="#D81B60"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +33,7 @@
         android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="Average"
+        android:textColor="#C96C56"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/noFailsTxt"
@@ -40,15 +43,17 @@
 
     <TextView
         android:id="@+id/ModuleNameGradeAnalytics"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="331dp"
+        android:layout_height="52dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:background="@drawable/moduleb"
         android:gravity="center"
         android:text="Module Name"
+        android:textColor="#4776b5"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +85,7 @@
         android:layout_marginLeft="24dp"
         android:gravity="center"
         android:text="60%"
-        android:textColor="#D81B60"
+        android:textColor="#C96C56"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/NoFailsTxt"
