--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,17 +20,16 @@
 
     <Button
         android:id="@+id/Homebutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#c67915"
-        android:text="HomePage"
+        android:layout_width="149dp"
+        android:layout_height="53dp"
+        android:background="@drawable/homepage"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.722" />
+        app:layout_constraintVertical_bias="0.704" />
 
     <Button
         android:id="@+id/Reviewbutton"
