--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/androidback"
     tools:context=".Review">
 
 
@@ -41,15 +42,15 @@
 
     <Button
         android:id="@+id/submitRatingButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Submit Rating"
+        android:background="@drawable/submit"
         app:layout_constraintBottom_toTopOf="@+id/ratingBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/enterRatingText"
@@ -67,11 +68,15 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Overall Rating: No Data Yet"
+        android:textStyle="bold"
+        android:textColor="#70716f"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/enterRatingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ModuleName" />
+        app:layout_constraintTop_toBottomOf="@+id/ModuleName"
+        android:gravity="center_horizontal" />
 
     <EditText
         android:id="@+id/postCommentText"
@@ -121,18 +126,20 @@
 
     <Button
         android:id="@+id/updateRatingButton"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="110dp"
+        android:layout_height="34dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Update Rating"
+        android:background="@drawable/update"
         app:layout_constraintBottom_toTopOf="@id/CommentRecycler"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintStart_toEndOf="@+id/ratingBar"
-        app:layout_constraintTop_toBottomOf="@+id/submitRatingButton" />
+        app:layout_constraintTop_toBottomOf="@+id/submitRatingButton"
+        app:layout_constraintVertical_bias="0.636" />
 
     <EditText
         android:id="@+id/ModuleName"
@@ -146,9 +153,13 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
+        android:textAlignment="center"
+        android:textColor="#BF4A3F"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/ratingInfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_horizontal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
