--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/loginbackground"
     tools:context=".Login">
 
 
@@ -16,26 +16,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="42dp"
-        android:layout_below="@+id/ModuleNameText"
-        android:layout_alignEnd="@+id/ModuleNameText"
-        android:layout_alignRight="@+id/ModuleNameText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginLeft="61dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="-3dp"
-        android:layout_marginRight="-3dp"
-        android:background="#FFFFFF"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColorHint="#009688" />
-
 
     <EditText
         android:id="@+id/ModuleNameText"
@@ -46,16 +26,36 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="330dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
-        android:background="#FFFFFF"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="202dp"
+        android:layout_marginEnd="65dp"
+        android:layout_marginRight="65dp"
+        android:background="@drawable/assesment"
         android:focusable="true"
         android:hint="Enter Name"
 
         android:textColorHighlight="#00CEBA"
+        android:textColorHint="#009688" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="42dp"
+        android:layout_below="@+id/ModuleNameText"
+        android:layout_alignEnd="@+id/ModuleNameText"
+        android:layout_alignRight="@+id/ModuleNameText"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginRight="-3dp"
+        android:background="@drawable/done1"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
         android:textColorHint="#009688" />
 
     <TextView
@@ -95,34 +95,33 @@
         android:layout_height="wrap_content"
         android:text="Teacher Login" />
 
-    <Button
-        android:id="@+id/buttonAttended"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="-100dp"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:layout_marginBottom="44dp"
-        android:text="login"
-        android:background="#1580c6"
-        />
 
     <Button
         android:id="@+id/buttonMissed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="45dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:background="#1580c6"
-        android:layout_marginRight="60dp"
-        android:layout_marginBottom="44dp"
-        android:textSize="20dp"
+        android:layout_marginEnd="79dp"
+        android:layout_marginRight="79dp"
+        android:layout_marginBottom="170dp"
+        android:background="@drawable/cancel"
         android:textColor="#ffffff"
-        android:text="Cancel" />
+        android:textSize="20dp" />
 
+    <Button
+        android:id="@+id/buttonAttended"
+        android:layout_width="98dp"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="173dp"
+        android:layout_toStartOf="@+id/buttonMissed"
+        android:layout_toLeftOf="@+id/buttonMissed"
+        android:background="@drawable/login"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/btnSolutions"
