--- a/app/src/main/res/layout/assessment_list_element.xml
+++ b/app/src/main/res/layout/assessment_list_element.xml
@@ -1,66 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gradebackground">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:padding="5dp"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="2dp"
+    >
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginBottom="31dp"
-        android:padding="5dp"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/GradeData"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/GradeData"
-        android:layout_width="83dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
-        android:layout_weight="1"
-        android:background="@drawable/assesment"
-        android:gravity="center"
-        android:text="70%"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/AssesmentName"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
 
     <TextView
         android:id="@+id/AssesmentName"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:background="@drawable/assesment"
         android:gravity="center"
         android:text="AssesementName"
+        android:background="@drawable/assesment"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/GradeData"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="270dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:background="@drawable/done1"
+        android:text="70%"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/GradeData"
-        app:layout_constraintHorizontal_bias="0.139"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textStyle="bold" />
+
+
+</androidx.cardview.widget.CardView>
