--- a/app/src/main/res/layout/checkable_list_layout.xml
+++ b/app/src/main/res/layout/checkable_list_layout.xml
@@ -7,4 +7,5 @@
     android:gravity="center_vertical"
     android:checkMark="?android:attr/listChoiceIndicatorMultiple"
     android:padding="5sp"
+    android:background="@drawable/gradebackground"
     />
